[package]
name = "uom"
version = "0.25.0"
authors = ["Mike Boutin <mike.boutin@gmail.com>"]
edition = "2018"
description = "Units of measurement -- type-safe zero-cost dimensional analysis"
documentation = "https://docs.rs/uom"
#homepage = ""
repository = "https://github.com/iliekturtles/uom"
readme = "README.md"
keywords = ["units", "measurement", "SI", "dimensional-analysis", "no_std"]
categories = ["no-std", "science", "value-formatting"]
license = "Apache-2.0/MIT"

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "iliekturtles/uom" }
coveralls = { repository = "iliekturtles/uom" }
maintenance = { status = "actively-developed" }

[workspace]
members = ["uom-macros"]

[dependencies]
uom-macros = { version = "0.0", path = "uom-macros" }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
typenum = "1.10"

[features]
default = ["f32", "f64", "si", "std"]
usize = []
u8 = []
u16 = []
u32 = []
u64 = []
u128 = []
isize = []
i8 = []
i16 = []
i32 = []
i64 = []
i128 = []
bigint = []
biguint = []
rational = []
rational32 = []
rational64 = []
bigrational = []
f32 = []
f64 = []
si = []
std = []
# The `use_serde` feature exists so that, in the future, other dependency features like num/serde
# can be added. However, num/serde is currently left out because it has not yet been updated to
# Serde 1.0. It is also necessary to name the feature something other than `serde` because of a
# cargo bug: https://github.com/rust-lang/cargo/issues/1286
use_serde = ["serde"]
