[package]
name = "uom"
version = "0.33.0"
edition = "2018"
authors = ["Mike Boutin <mike.boutin@gmail.com>"]
description = "Units of measurement"
documentation = "https://docs.rs/uom"
#homepage = ""
repository = "https://github.com/iliekturtles/uom"
readme = "README.md"
keywords = ["units", "measurement", "SI", "dimensional-analysis", "no_std"]
categories = ["no-std", "science", "value-formatting"]
license = "Apache-2.0/MIT"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[package.metadata.docs.rs]
features = ["usize", "u32", "u64", "isize", "i32", "i64", "bigint", "biguint", "rational", "rational32", "rational64", "bigrational", "use_serde"]

[package.metadata]
msrv = "1.43.0"

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = [
    "tests/feature_check",
    "uom-macros",
    "tests/edition_check",
]

[dependencies]
num-traits = { version = "0.2", default-features = false }
num-rational = { version = "0.4", optional = true, default-features = false }
num-bigint = { version = "0.4", optional = true, default-features = false, features = ["std"] }
num-complex = { version = "0.4", optional = true, default-features = false, features = ["std"] }
serde = { version = "1.0", optional = true, default-features = false }
typenum = "1.13"

[dev-dependencies]
approx = "0.5"
quickcheck = "1.0"
serde_json = "1.0"
static_assertions = "1.1"

[features]
default = ["autoconvert", "f32", "f64", "si", "std"]
autoconvert = []
usize = ["rational-support"]
u8 = ["rational-support"]
u16 = ["rational-support"]
u32 = ["rational-support"]
u64 = ["rational-support"]
u128 = ["rational-support"]
isize = ["rational-support"]
i8 = ["rational-support"]
i16 = ["rational-support"]
i32 = ["rational-support"]
i64 = ["rational-support"]
i128 = ["rational-support"]
bigint = ["bigint-support"]
biguint = ["bigint-support"]
rational = ["rational-support"]
rational32 = ["rational-support"]
rational64 = ["rational-support"]
bigrational = ["bigint-support"]
complex32 = ["complex-support"]
complex64 = ["complex-support"]
f32 = []
f64 = []
si = []
std = ["num-traits/std"]
# The try-from feature is deprecated and will be removed in a future release of uom. Functionality
# previously exposed by the feature is now enabled by default.
try-from = []
# The `use_serde` feature exists so that, in the future, other dependency features like num/serde
# can be added. However, num/serde is currently left out because it has not yet been updated to
# Serde 1.0. It is also necessary to name the feature something other than `serde` because of a
# cargo bug: https://github.com/rust-lang/cargo/issues/1286
use_serde = ["serde"]
# Internal features to include appropriate num-* crates.
rational-support = ["num-rational"]
bigint-support = ["num-bigint", "num-rational/num-bigint-std"]
complex-support = ["num-complex"]

[[example]]
name = "base"
required-features = ["autoconvert", "f32", "si"]

[[example]]
name = "mks"
required-features = ["f32"]

[[example]]
name = "si"
required-features = ["f32", "si"]

[[example]]
name = "unit"
required-features = ["f32", "si"]
