[package]
name = "feature_check"
version = "0.1.0"

[dependencies]
uom = { path = "../.." }

[features]
default = []
# Internal features to support channel specific test logic. Note that a
# channel's feature must be added to the `--features` list when compiling
# manually as no channel detection is build into `cargo`/`rustc`.
"1.20.0" = []
stable = []
beta = []
nightly = []
